# Vacncy-managment

./: .env.example  .gitignore  README.md
backend/src/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0. a3034e9253cc_.py  051244ad212e_.py  10. add_responses.py  11. add_search_indexes.py  12. add_employer_comment_to_responses.py  12. add_message_from_employeer.py  13. add_search_vector_triggers.py  2. 984601cabba1_add_2_url_avatar.py  3. 46d304cc4e9c_3_add_vacancy_and_employer.py  4. 82905c5d9a9c_4_update.py  5. add_func.py  6. add_search_requests.py  7. fix_unique_user_uuid.py  8. add_resume.py  9. add_user_contacts.py  a3034e9253cc_.py  dea8152983f8_1_add_status.py
backend/src/app/: enum.py  main.py
backend/src/app/auth/: __init__.py  constant.py
backend/src/app/company/: __init__.py  model.py  repository.py  schema.py  service.py
backend/src/app/core/: __init__.py  broker.py  db.py  elasticsearch.py  env.py
backend/src/app/employer/: model.py
backend/src/app/mock/: __init__.py  data.py  insert_mock.py
backend/src/app/response/: __init__.py  const.py  model.py  repository.py  schema.py  service.py
backend/src/app/resume/: __init__.py  const.py  filter.py  repository.py
backend/src/app/search/: __init__.py  constants.py  search.py  type.py
backend/src/app/search_request/: repository.py  schema.py  service.py
backend/src/app/search_requests/: model.py  repository.py  service.py
backend/src/app/users/: __init__.py  dependency.py  filter.py  init_superuser.py  model.py  (+3 more)
(+128 files in other folders)
