[project]
name = "vacancy-managment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "ruff>=0.14.11",
    "slowapi>=0.1.9",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.5.0",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.1",
    "uvicorn>=0.41.0",
]
